--- a/css/base.css
+++ b/css/base.css
@@ -40,6 +40,9 @@ a[href]:visited {
 main {
   padding: 1rem;
 }
+footer {
+  padding: 1rem;
+}
 main :first-child {
   margin-top: 0;
 }
@@ -82,6 +85,9 @@ pre {
   padding: 1em;
   margin: .5em 0;
   background-color: #f6f6f6;
+}
+.hidden {
+  display: none;
 }
 .highlight-line {
   display: block;
